--- a/pl/11_blog-nexss-programmer/installation/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/installation/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Welcome - News"
-permalink: /pl/nexss-blog.html
+title: "BLOG Nexss Programmer - Installation"
+permalink: /pl/11_blog-nexss-programmer/installation/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /pl/nexss-blog.html
 </script>
 
   <title>
-    BLOG Welcome - News
+    BLOG Nexss Programmer - Installation
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="News - Nexss Programmer Blog">
+  <meta name="description" content="Installation - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Welcome - News">
+  <meta property="og:description" content="BLOG Nexss Programmer - Installation">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /pl/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a href="/en/nexss-blog.html">EN</a>
+                <a href="/en/11_blog-nexss-programmer/installation/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/nexss-blog.html">PL</a>
+                <a style="color:yellow;font-weight:bold;" class="selected" href="/pl/11_blog-nexss-programmer/installation/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -143,10 +143,6 @@ permalink: /pl/nexss-blog.html
     });
 </script><div class="block" id="nexssPage">
   <div class="center">
-        <!-- <h1 class="block__title">
-      <span>Nexss Programmer </span>
-      The Programming Blog
-    </h1> -->
         <div class="row">
       <div class="column1">
                 <h3>Welcome</h3>
@@ -156,7 +152,7 @@ permalink: /pl/nexss-blog.html
                 <h3>Nexss Programmer</h3>
         <ul>
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
-                    <li><a href="pl/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
+                    <li><a class="active" href="pl/11_blog-nexss-programmer/installation/nexss-blog.html"><strong>Installation</strong> </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html">Package_json_usage </a></li>
                   </ul>
@@ -183,101 +179,14 @@ permalink: /pl/nexss-blog.html
                   </ul>
               </div>
       <div class="column2">
-        <h1>News</h1>
-<h2>Nexss Programmer release <b>2.5.51</b></h2>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 24th, 2021</span></p>
-<p>Fix for Linux: Package update was showing getShell not found. (@nexssp/package)</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.51">more</a>
-<h2>Nexss Programmer release <b>2.5.47</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 19th, 2021</span></p>
-<p>Added error custom definition per project/package<br>
-New Package <strong>Audio</strong>. Package <strong>Audio/Split</strong> splits your audio per 2,3 or 5 separate tracks. For example 2 will separate vocal and accompaniment.</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.47">more</a>
-<h2>Nexss Programmer release <b>2.5.44</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">October 9th, 2021</span></p>
-<p>Improvements+<br>
-<strong>CVE-2021-3807</strong> Inefficient Regular Expression Complexity in chalk/ansi-regex</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.44">more</a>
-<h2>Nexss Programmer release <b>2.5.43</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 30th, 2021</span></p>
-<p><strong>CVE-2021-3749</strong> Incorrect Comparison in axios</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.43">more</a>
-<h2>Nexss.com Job Openings</h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">September 22nd, 2021</span></p>
-<p>We are looking for people who are willing to <strong>join our team</strong>. All positions are <strong>REMOTE</strong>. Please check our <strong>Job Openings</strong></p>
-<ul>
-<li><a href="pl/nexss-kariera.html">more</a>
-<h2>Nexss Programmer new version <b>2.5.31</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">June 11th, 2021</span></p>
-<p>New 2.5.x version
-A lot of improvements:</p>
-<p>Now you can also use nexss programmer as separate tools.. and as a full cli tool: <a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a></p>
-<h2>Cli tools and libraries</h2>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/cli">@nexssp/<strong>cli</strong></a> - nexss programmer - all tools, languages together</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/command">@nexssp/<strong>command</strong></a> - easy terminal commands</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/config">@nexssp/<strong>config</strong></a> - config system yml, json</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/file">@nexssp/<strong>file</strong></a> - file templates with over 50 programming language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/ensure">@nexssp/<strong>ensure</strong></a> - ensure mulitple os packages installed</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/cache">@nexssp/<strong>cache</strong></a> - caching library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/language">@nexssp/<strong>language</strong></a> - install programming environments, manage packages for each language</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/min">@nexssp/<strong>min</strong></a> - minimizing library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/os">@nexssp/<strong>os</strong></a> - multiple os library</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/package">@nexssp/<strong>package</strong></a> - managing Nexss Programmer packages (git repositories)</li>
-<li>@nexssp/<strong>process</strong> - managing process library (will be added in future versions - it is available up to 2.4.x as nexss programmer feature)</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/project">@nexssp/<strong>project</strong></a> - managing Nexss Programmer projects, create new</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/test">@nexssp/<strong>test</strong></a> - testing library</li>
-</ul>
-<h2>Libraries</h2>
-<ul>
-<li><a href="https://www.npmjs.com/package/@nexssp/ansi">@nexssp/<strong>ansi</strong></a> - colors, cursor</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/const">@nexssp/<strong>const</strong></a> - constants in JS/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/data">@nexssp/<strong>data</strong></a> - data validate, test</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/dddebug">@nexssp/<strong>dddebug</strong></a> - debugging functions</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/expression-parser">@nexssp/<strong>expression-parser</strong></a> - variable template system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/extend">@nexssp/<strong>extend</strong></a> - extend standard functions of JavaScript/NodeJS</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/logdebug">@nexssp/<strong>logdebug</strong></a> - logging, debugging script</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/packunpack">@nexssp/<strong>packunpack</strong></a> - pack/unpack library with .gitignore</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/plugin">@nexssp/<strong>plugin</strong> </a>- plugin system</li>
-<li><a href="https://www.npmjs.com/package/@nexssp/stack">@nexssp/<strong>stack</strong></a> - pretty error stack</li>
-<li>
-<p><a href="https://www.npmjs.com/package/@nexssp/system">@nexssp/<strong>system</strong></a> - run system commands</p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.31">more</a>
-<h2>Nexss Programmer new version <b>2.4.0</b></h2></li>
-</ul>
-</li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">May 3rd, 2021</span></p>
-<p>A LOT OF REFACTORING AND IMPROVEMENTS: </p><ul><li>New packages:<b>@nexssp/min
-@nexssp/test
-@nexssp/const
-@nexssp/dddebug
-@nexssp/stack</b></li><li><b>new generic testing module</b></li><li><b>much more to come..</b></li></ul><p></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
-<h2>Nexss Programmer new version <b>2.2.40</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">April 25th, 2021</span></p>
-<p>NEW FUNCTIONALITIES ADDED: </p><ul><li><b>nexss run</b></li><li><b>nexss cache rebuild</b></li><li><b>big efficiency improvement</b></li></ul><p></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.40">more</a>
-<h2>Nexss Programmer new version <b>2.2.24</b></h2></li>
-</ul>
-<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">March 29th, 2021</span></p>
-<p>NEW LANGUAGE ADDED: <b>LiveScript</b></p>
-<ul>
-<li><a href="https://github.com/nexssp/cli/releases/tag/2.2.24">more</a></li>
-</ul>
+        <h1>Nexss Programmer - Installation</h1>
+<h2>Node.js</h2>
+<p>Nexss Programmer 2.x is written in the <a href="https://nodejs.org/">Node.js</a>. If you don't have it installed please go to the website <a href="https://nodejs.org/en/">https://nodejs.org/en/</a> and use instructions there.</p>
+<h2>Nexss Programmer</h2>
+<pre><code class="language-sh">npm i -g @nexssp/cli</code></pre>
+<h2>Using npx</h2>
+<p>You don't need to install Nexss Programmer and just use <strong>npx</strong> (after Node.js installation).</p>
+<pre><code class="language-sh">npx @nexssp/cli</code></pre>
       </div>
     </div>
   </div>
