--- a/pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
+++ b/pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
@@ -152,6 +152,7 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
                 <h3>Nexss Programmer</h3>
         <ul>
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction </a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/installation/nexss-blog.html">Installation </a></li>
                     <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials </a></li>
                     <li><a class="active" href="pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html"><strong>Package_json_usage</strong> </a></li>
                   </ul>
@@ -159,6 +160,7 @@ permalink: /pl/11_blog-nexss-programmer/package_json_usage/nexss-blog.html
         <ul>
                     <li><a href="pl/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
                     <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
+                    <li><a href="pl/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
