--- a/pl/programmerNexss-Programmer-Cheat-sheet.html
+++ b/pl/programmerNexss-Programmer-Cheat-sheet.html
@@ -45,12 +45,12 @@ permalink: /pl/programmer.html/Nexss-Programmer-Cheat-sheet
       // }
     });
   </script>
-  <style>
+  <!-- <style>
     body {
       font-family: 'PT Mono', monospace;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
