--- a/en/programmer_.html
+++ b/en/programmer_.html
@@ -45,12 +45,12 @@ redirect_from: /en/programmer.html/
       // }
     });
   </script>
-  <style>
+  <!-- <style>
     body {
       font-family: 'PT Mono', monospace;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
