--- a/programmerNexss-Programmer-Edit.html
+++ b/programmerNexss-Programmer-Edit.html
@@ -45,12 +45,12 @@ permalink: /programmer.html/Nexss-Programmer-Edit
       // }
     });
   </script>
-  <style>
+  <!-- <style>
     body {
       font-family: 'PT Mono', monospace;
     }
   </style>
-  <link href="https://fonts.googleapis.com/css?family=PT+Mono&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
