--- a/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -162,6 +162,10 @@ permalink: /pl/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
                     <li><a href="pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                     <li><a href="pl/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
+                <h3>Bitwig Studio</h3>
+        <ul>
+                    <li><a href="pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                  </ul>
                 <h3>Blender 3D</h3>
         <ul>
                     <li><a href="pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
