--- a/21_Node.js/lockfileVersion-issue/nexss-blog.html
+++ b/21_Node.js/lockfileVersion-issue/nexss-blog.html
@@ -162,6 +162,10 @@ permalink: /21_Node.js/lockfileVersion-issue/nexss-blog.html
                     <li><a class="active" href="21_Node.js/lockfileVersion-issue/nexss-blog.html"><strong>LockfileVersion Issue</strong> </a></li>
                     <li><a href="21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
+                <h3>Bitwig Studio</h3>
+        <ul>
+                    <li><a href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                  </ul>
                 <h3>Blender 3D</h3>
         <ul>
                     <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
