--- a/en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
+++ b/en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Node.js - LockfileVersion Issue"
-permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
+title: "BLOG Bitwig Studio - Bitwig VST Video Player"
+permalink: /en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
 </script>
 
   <title>
-    BLOG Node.js - LockfileVersion Issue
+    BLOG Bitwig Studio - Bitwig VST Video Player
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="LockfileVersion Issue - Nexss Programmer Blog">
-  <link rel="canonical" href="/21_Node.js/lockfileVersion-issue/nexss-blog.html">
+  <meta name="description" content="Bitwig VST Video Player - Nexss Programmer Blog">
+  <link rel="canonical" href="/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Node.js - LockfileVersion Issue">
+  <meta property="og:description" content="BLOG Bitwig Studio - Bitwig VST Video Player">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -58,11 +58,11 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
         <ul class="info" id="changeLanguage">
             <li>Made with <span style="font-size:larger;color:#ff0003 !important;">♥</span> in <img alt="Poland" height="10" src="assets/images/flagPL.jpg"></li>
             <li>
-                <a style="color:yellow;font-weight:bold;" href="/en/21_Node.js/lockfileVersion-issue/nexss-blog.html">EN</a>
+                <a style="color:yellow;font-weight:bold;" href="/en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">EN</a>
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/21_Node.js/lockfileVersion-issue/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -159,12 +159,12 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
                 <h3>Node.js</h3>
         <ul>
                     <li><a href="en/21_Node.js/module_alias/nexss-blog.html">Module_alias </a></li>
-                    <li><a class="active" href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html"><strong>LockfileVersion Issue</strong> </a></li>
+                    <li><a href="en/21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                     <li><a href="en/21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a href="en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                    <li><a class="active" href="en/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html"><strong>Bitwig VST Video Player</strong> </a></li>
                   </ul>
                 <h3>Blender 3D</h3>
         <ul>
@@ -184,25 +184,45 @@ permalink: /en/21_Node.js/lockfileVersion-issue/nexss-blog.html
                   </ul>
               </div>
       <div class="column2">
-        <h1>lockfileVersion issues</h1>
-<h2>Issue</h2>
-<p><strong>npm</strong> introduced new <strong>package-lock.json</strong> versions with the <strong>lockfileVersion</strong>. When user has different version of npm, which package was created can ends up with git diffs and unnecessary issues.</p>
-<p>From <strong>npmjs.com</strong> about lockfileVersion:
-<br>
-"No version provided: an "ancient" shrinkwrap file from a version of npm prior to npm v5.</p>
+        <h1>Bitwig VST Video Player</h1>
+<p>This article won't be about 'how to make <strong>VST</strong> to sync videos using VST', but rather work around how to make it work in <strong>Bitwig Studio</strong> (and also in another DAW).</p>
+<h2>Setup Environment (Windows)</h2>
+<p>Please remember to <em>check licenses</em> of that great software before use them.</p>
 <ul>
-<li><strong>lockfileVersion:1</strong> The lockfile version used by <strong>npm v5</strong> and <strong>v6</strong>.</li>
-<li><strong>lockfileVersion:2</strong> The lockfile version used by <strong>npm v7</strong>, which is backwards compatible to v1 lockfiles.</li>
-<li><strong>lockfileVersion:3</strong> The lockfile version used by <strong>npm v7</strong>, <em>without backwards compatibility</em> affordances. This is used for the hidden lockfile at _node<em>modules/.package-lock.json</em>, and will likely be used in a future version of npm, once support for npm v6 is no longer relevant."</li>
+<li><strong>Download</strong> and install <a href="https://www.tobias-erichsen.de/software/loopmidi.html">loopMidi</a> by Tobias Erichsen.</li>
+<li>
+<p><a href="http://xjadeo.sourceforge.net/download.html">Download</a> and install <a href="https://github.com/x42/xjadeo">xjadeo</a> <em>video player</em>.</p>
+<p><br></p>
+</li>
+<li>Run xJadeo from command line:</li>
 </ul>
-<pre><code class="language-json">- "lockfileVersion": 1
-+ "lockfileVersion": 2
-+ "required": true</code></pre>
-<h2>Solution</h2>
-<p>To avoid modifying package-lock.json lockfileVersion field, use <strong>npm install --no-save</strong></p>
-<pre><code class="language-sh"># Will NOT overwrite org package-lock.json file
-npm install --no-save</code></pre>
-<p>more about <strong>lockfileVersion</strong>: <a href="https://docs.npmjs.com/cli/v7/configuring-npm/package-lock-json#lockfileversion">lockfileVersion on npmjs.com</a></p>
+<pre><code class="language-sh">"C:\Program Files\xjadeo\xjadeo.exe" -S -a -i 3 --midi-driver portmidi -m -1</code></pre>
+<p>more options on xjadeo <a href="http://xjadeo.sourceforge.net/xjadeo.html">cli arguments - here</a>.</p>
+<p><br></p>
+<p>Right Click and <strong>File</strong>-&gt;<strong>Open</strong> or <strong>CTRL+O</strong> and select your <strong>video</strong>.</p>
+<h2>Start - Synchronize Video with Bitwig Studio</h2>
+<ol>
+<li>
+<p>Start the <strong>loopMidi</strong> and create new Loopback Midi Port and name it for example "myMidiLoopback"</p>
+<p><br></p>
+</li>
+<li>
+<p>Drag and Drop the Video in the Bitwig (It will extract audio and place in the (best) Audio Track). Then change the audio clip to raw (select the Audio clip you just imported and in the Audio Event Properties -&gt; MODE change from <strong>Stretch</strong> to <strong>Raw</strong>)</p>
+<p><br></p>
+</li>
+<li>
+<p>Go to the <strong>Bitwig Studio</strong>-&gt;<strong>Settings</strong>-&gt;<strong>Synchronization</strong> and click on <strong>MTC</strong> for "myMidiLoopback".</p>
+</li>
+<li>
+<p>Now start playing music in the Bitwig Studio and you can see that video is syncronized.</p>
+<p><br></p>
+</li>
+</ol>
+<p><em>note:</em> You can make the <strong>video player</strong> window stay on top <strong>Right Click-&gt;Display-&gt;On Top</strong> or using short cut <strong>SHIFT+A</strong> (keep pressed bit longer as short may not work.)</p>
+<p><em>note 2:</em> You can shrink the video for a better performance using <strong>ffmpeg</strong>. For example:</p>
+<pre><code class="language-sh"># shrink your video to one quarter size. Change 8 to 4 for half size.
+ffmpeg -i yourvideo.mp4 -vf "scale=trunc(iw/8)*2:trunc(ih/8)*2" -vcodec h264 -acodec aac -crf 28 a_fourth_the_frame_size.mkv</code></pre>
+<p>So without extra <strong>VST</strong> plugins you can synchronize videos using just <strong>video player</strong> and MIDI.</p>
       </div>
     </div>
   </div>
