--- a/nexss-blog.html
+++ b/nexss-blog.html
@@ -166,6 +166,10 @@ permalink: /nexss-blog.html
                     <li><a href="21_Node.js/lockfileVersion-issue/nexss-blog.html">LockfileVersion Issue </a></li>
                     <li><a href="21_Node.js/npm-link-unlink/nexss-blog.html">Npm Link Unlink </a></li>
                   </ul>
+                <h3>Bitwig Studio</h3>
+        <ul>
+                    <li><a href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
+                  </ul>
                 <h3>Blender 3D</h3>
         <ul>
                     <li><a href="369_blog-blender-3D/custom-scripting-templates/nexss-blog.html">Custom Scripting Templates </a></li>
