--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@ permalink: /
     <div class="welcome">
         <div class="center">
             <div class="welcome__wrap  wow slideInLeft">
+                <iframe width="474" height="267" src="https://www.youtube.com/embed/7WbnYyEnBNk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                 <h1>
                     <span class="text_1">
                         Open Source
                     </span>
-                    <span class="text_2" style="margin:0;margin-top:30px;color:#fec518;display:block;">
+                    <span class="text_2">
                         Nexss Programmer 2.5.54
                     </span>
                 </h1>
-                <div class="text_3">
+                <div class="text_3" style="font-size:larger;">
                     <h2>The innovative and evolutionary tool. </h2>
                     <b style="color:#61d4ff">51</b> great technologies together and soon will
                     be more. <br>
                     Compile program from any programming language in seconds.<br>
                     Save Your time every day.<br>
-                    <a title="Nexss Programmer - Video Presentation" target="_blank" style="color:yellow;" href="https://www.youtube.com/watch?v=7WbnYyEnBNk">Video Presentation</a>
-                </div>
+                                    </div>
                 <!-- <div class="btn__wrap__left">
                     <a target="_blank" href="easy-install-nexss-programmer.html"
                         class="btn btn__large btn__orange">Free Open Source Version</a>
@@ -155,7 +155,7 @@ permalink: /
                     <a href="easy-install-nexss-programmer.html" class="btn btn__large btn__orange">Free Open Source Version</a>
                     <a href="nexss-programmer-features.html" class="btn btn__large btn__green">CLI
                         Tool - Features</a>
-                    <br>
+
                     <a href="11_blog-nexss-programmer/tutorials/nexss-blog.html" class="btn btn__large btn__blue">Tutorials</a>
                     <a target="_blank" href="https://www.npmjs.com/package/@nexssp/cli" class="btn btn__large btn__yellow">NPM JS</a>
                 </div>
@@ -426,7 +426,7 @@ permalink: /
             How can we help you?
         </h2>
         <div class="contacts__block">
-            <div class="left_side  wow bounceInRight">
+            <div class="left_side  wow bounceInRight" style="margin:0 auto;">
                 <ul>
                     <li><a id="ext1"></a>
                     </li>
@@ -449,29 +449,7 @@ permalink: /
                     </div>
                 </div>
             </div>
-            <div class="right_side  wow bounceInLeft">
-                <form method="post" class="form wow fadeInUp">
-                    <div class="row">
-                        <input name="name" type="text" class="input" placeholder="Name*" required="">
                     </div>
-                    <div class="row">
-                        <input name="email" type="text" class="input" placeholder="Email*" required="">
-                    </div>
-                    <div class="row">
-                        <textarea name="message" placeholder="Message" class="textarea" rows="5" required=""></textarea>
-                    </div>
-                    <div class="row">
-                        <div class="btn__wrap__left">
-                            <input disabled="" type="submit" class="btn btn__orange btn__large" value="Send">
-                        </div>
-                    </div>
-                    <input type="hidden" name="action" value="SendContactForm" size="255">
-
-                    <input type="hidden" name="nexssCrsfTokenindex_html" value="3a416e3c546d2810e334ac53ef3110868a4f6d48c661f9af5859b6adcfd9d4a5">
-
-                </form>
-            </div>
-        </div>
     </div>
 </div>    
         <!-- footer -->
